# LLMwiki

./: .gitattributes  .gitignore  AGENTS.local.md  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  pyproject.toml  pytest.ini  requirements-dev.txt
.codex/agents/: README.md  (+13 more)
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md  release-governance.yml
docs/: README.md  REVIEW_SCOPE.md  anti-slop-admission.md  codebase-memory-mcp.md  development.md  ops-runtime.md  public-mirror.md  release.md  repository-surfaces.md  self-improvement-runtime.md  tools.md
external-reports/: llmwiki_code_change_implementation_report_20260516.md  llmwiki_integrated_review_reconciliation_improvement_report_20260515.md  llmwiki_long_run_integrated_improvement_plan_20260519.md  llmwiki_review_reconciled_improvement_report.md  report-reference-manifest.json
mk/: artifact.mk  core.mk  derived-surfaces.generated.mk  eval.mk  mechanism.mk  public.mk  registry.mk  release-authority.mk  release-evidence.mk  release-learning.mk  release.mk  static.mk  supply_chain.mk  test-selectors.generated.mk  test.mk
ops/: README.md  __init__.py  doc-graph-orphan-allowlist.json  make-target-inventory-operator.json  manifest.json  mypy-allowlist.txt  mypy-strict-preview-allowlist.txt  observation-closeout-registry.json  raw-registry.json  ruff-strict-preview-allowlist.txt  runtime-decomposition-plan.md  script-flat-import-aliases.json  script-lifecycle-overrides.json  script-lifecycle-policy.json  script-module-surface-overrides.json  script-module-surfaces.json  script-output-surfaces.json  test-lane-registry.json  workflow_action_pin_catalog.py
raw/: claude-prompting-best-practices.md
runs/: README.md
system/: concept--anti-slop-wiki-governance.md  concept--artifact-contracts.md  concept--binary-evals.md  concept--cross-reference-maintenance.md  concept--harness-optimization.md  concept--llm-wiki.md  concept--long-horizon-quality-guard.md  concept--memory-management-strategies.md  concept--multi-agent-routing.md  concept--persistent-wiki-vs-rag.md  concept--planning-gates.md  concept--prompt-contract-robustness.md  concept--self-improving-wiki-loop.md  concept--trace-store-and-run-ledger.md  concept--wiki-failure-mode-taxonomy.md  lint--broad-synthesis-watch-review-2026-04-14.md  lint--initial-review-2026-04-12.md  lint--raw-registry-wiki-ai-capability-shard-review-2026-04-16.md  lint--raw-registry-wiki-direct-seed-shard-review-2026-04-16.md  lint--raw-registry-wiki-shard-line-threshold-review-2026-04-14.md  lint--raw-unregistered-file-review-2026-04-16.md  query--index-and-raw-registry-separation-design-2026-04-12.md  query--runtime-quickstart-2026-04-15.md  source--a-mem-agentic-memory.md  source--autoresearch-skill-repo.md  source--bilevel-autoresearch.md  source--dspy-framework.md  source--jangpm-meta-skills-repo.md  source--karpathy-autoresearch-repo.md  source--kevinrgu-autoagent-repo.md  source--llm-wiki-review-report.md  source--meta-harness.md  source--multi-agent-collaboration-for-automated-research.md  source--natural-language-agent-harnesses-2026-04-17.md  source--openai-evaluation-best-practices.md  source--ouroboros-repo.md  source--prompt-guidance-official-docs-2026-04-16.md  source--prompt-robustness-perturbation-and-format-papers-2026-04-16.md  source--ro-crate.md  source--semantic-checks-and-execution-feedback-for-llm-assistants.md  (+12 more)
tests/: auto_improve_readiness_test_runtime.py  auto_improve_test_utils.py  cli_test_runtime.py  conftest.py  executor_model_output_test_utils.py  external_report_action_matrix_test_runtime.py  makefile_static_helpers.py  mechanism_review_test_utils.py  minimal_vault_runtime.py  minimal_vault_seed_core.py  minimal_vault_seed_smoke.py  mutation_proposal_test_runtime.py  release_run_ready_sample_runtime.py  report_contract_test_runtime.py  run_mechanism_experiment_test_utils.py  runtime_hotspot_golden_contract.py  runtime_test_context.py  supply_chain_sample_runtime.py  test_accepted_risk_vocabulary_schema.py  test_anti_slop_admission_runtime.py  test_archive_execution_manifest.py  test_artifact_binding_runtime.py  test_artifact_freshness_debt_runtime.py  test_artifact_freshness_mtime_runtime.py  test_artifact_freshness_payload_runtime.py  test_artifact_freshness_runtime.py  test_artifact_freshness_schema_runtime.py  test_artifact_io_runtime.py  test_artifact_relocation_audit.py  test_auto_improve_execution_runtime.py  test_auto_improve_iteration_runtime.py  test_auto_improve_learning_preflight_runtime.py  test_auto_improve_loop_decision_runtime.py  test_auto_improve_maintenance_decision_runtime.py  test_auto_improve_next_run_decision_runtime.py  test_auto_improve_outcome_runtime.py  test_auto_improve_promotion_stop_runtime.py  test_auto_improve_queue_runtime.py  test_auto_improve_readiness_loader_runtime.py  test_auto_improve_readiness_queue_runtime.py  (+303 more)
tools/: manual_mutate_auto_improve_decision_record_fallback.py  manual_mutate_auto_improve_existing_telemetry_inline.py  manual_mutate_auto_improve_timeout_telemetry.py  planning_gate_validate_second_run_mutation.py  regenerate_report_schema_samples.py  ruff_strict_preview.py  strict_preview_audit.py
wiki/: concept--ai-adoption-labor-and-public-sector-deployment.md  concept--ai-capability-claims-verification.md  concept--ai-compute-control.md  concept--ai-compute-infrastructure-buildout-stack.md  concept--ai-product-platform-and-agentic-ui.md  concept--ai-ran.md  concept--biomedicine-platform-and-disease-evidence.md  concept--coffee-brew-chemistry.md  concept--coffee-extraction-and-brew-control.md  concept--coffee-fermentation-processing.md  concept--coffee-grinding-static-control.md  concept--coffee-sensory-lexicon.md  concept--coffee-water-chemistry.md  concept--commodity-supply-and-price-transmission.md  concept--cyber-statecraft-and-ai-security.md  concept--digital-sovereignty-in-public-it.md  concept--energy-transition-policy-under-shock.md  concept--global-political-economy-and-institutional-realignment.md  index.md  (+397 more)
(+1801 files in other folders)
