[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-wiki-vnext"
version = "0.1.0"
description = "Persistent LLM wiki maintainer runtime and ops package."
readme = "README.md"
requires-python = ">=3.12"
license = "Apache-2.0"
license-files = ["LICENSE"]
dependencies = [
  "PyYAML>=6.0,<7",
  "jsonschema>=4.23,<5",
]

[project.optional-dependencies]
dev = [
  "build>=1.3,<2",
  "hypothesis>=6.100,<7",
  "pytest>=8.3,<10",
  "pytest-xdist>=3.6,<4",
  "ruff>=0.15,<1",
  "mypy>=1.20,<3",
  "types-PyYAML>=6.0,<7",
]

[project.scripts]
llm-wiki-finalize-run = "ops.scripts.mechanism.finalize_run:main"
llm-wiki-improvement-observations = "ops.scripts.mechanism.improvement_observations:main"
llm-wiki-planning-gate-validate = "ops.scripts.mechanism.planning_gate_validate:main"
llm-wiki-run-mechanism-experiment = "ops.scripts.mechanism.run_mechanism_experiment:main"
llm-wiki-status = "ops.scripts.release.release_status_surface:main"

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
select = [
  "E4",
  "E7",
  "E9",
  "F",
  "B",
  "SIM",
  "UP",
  "I",
  "C4",
  "RET",
  "PIE",
  "PERF402",
  "PERF403",
  "PLC0208",
  "PLR1714",
  "PTH105",
  "PTH111",
  "PTH117",
  "PTH123",
  "RUF007",
  "RUF015",
  "RUF021",
  "RUF022",
  "RUF034",
  "RUF046",
  "RUF100",
]

[tool.ruff.lint.isort]
combine-as-imports = true

[tool.ruff.lint.per-file-ignores]
# conftest bootstraps repo imports before loading pytest plugins and local test helpers.
"tests/conftest.py" = ["E402"]

[tool.mypy]
python_version = "3.12"
check_untyped_defs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
follow_imports = "skip"
ignore_missing_imports = true
show_error_codes = true
warn_unused_ignores = true

[tool.setuptools.packages.find]
include = ["ops*"]

[tool.setuptools.package-data]
ops = [
  "script-lifecycle-policy.json",
  "script-module-surfaces.json",
  "script-output-surfaces.json",
  "evals/*.md",
  "policies/*.json",
  "policies/*.yaml",
  "schemas/*.json",
  "templates/*.json",
  "templates/*.md",
  "templates/*.yaml",
  "templates/mechanism-run/*.json",
  "templates/mechanism-run/*.md",
  "templates/mechanism-run/*.yaml",
]
